[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/Mats/spawn/Marble006_8K-JPG/Marble006_8K_Displacement.jpg" type="Texture" id=1]
[ext_resource path="res://assets/Mats/spawn/Marble006_8K-JPG/Marble006_8K_Normal.jpg" type="Texture" id=2]
[ext_resource path="res://mat1.tres" type="Material" id=3]
[ext_resource path="res://scripts/Movement.gd" type="Script" id=4]
[ext_resource path="res://Hexagonator.obj" type="ArrayMesh" id=5]
[ext_resource path="res://scripts/Triangulator.gd" type="Script" id=6]
[ext_resource path="res://hand_v1_L1.123c8a068500-0e0b-4d25-a1e4-f75b7a12ee9d/16834_hand_v1_NEW.obj" type="ArrayMesh" id=7]
[ext_resource path="res://mat0.tres" type="Material" id=8]
[ext_resource path="res://mat2.tres" type="Material" id=9]
[ext_resource path="res://Globals.gd" type="Script" id=14]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="SphereShape" id=2]

[sub_resource type="PhysicsMaterial" id=3]

[sub_resource type="BoxShape" id=4]

[sub_resource type="SpatialMaterial" id=5]
albedo_texture = ExtResource( 1 )
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 2 )

[node name="Spatial" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 15, 0 )
script = ExtResource( 14 )

[node name="Player" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
script = ExtResource( 4 )

[node name="BodyCollision" type="CollisionShape" parent="Player"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -2, 0, 1, -8.74228e-08, 0, 0.452291, 0 )
shape = SubResource( 1 )

[node name="ProgressBar" type="ProgressBar" parent="Player"]
modulate = Color( 1, 0, 0.933333, 1 )
margin_left = 3.48917
margin_top = 1043.54
margin_right = 534.489
margin_bottom = 1077.54
value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Player"]
margin_left = 245.033
margin_top = 1026.53
margin_right = 366.033
margin_bottom = 1040.53
text = "HEALTH"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerView" type="Spatial" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )

[node name="Camera" type="Camera" parent="Player/PlayerView"]

[node name="16834_hand_v1_NEW" type="MeshInstance" parent="Player/PlayerView"]
transform = Transform( 0.0476338, -0.0111566, 0.0103221, -0.0114023, -0.0486825, 1.70615e-17, 0.0100502, -0.00235391, -0.0489229, 1.4, -1.609, -2.5 )
visible = false
mesh = ExtResource( 7 )
material/0 = null

[node name="StaticDynamicWeapons" type="Spatial" parent="Player/PlayerView"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, -0.8, -3.2 )
script = ExtResource( 6 )

[node name="StaticWeapons" type="RigidBody" parent="Player/PlayerView/StaticDynamicWeapons"]

[node name="w0" type="CollisionShape" parent="Player/PlayerView/StaticDynamicWeapons/StaticWeapons"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
shape = SubResource( 2 )

[node name="CSGMesh1" type="CSGMesh" parent="Player/PlayerView/StaticDynamicWeapons/StaticWeapons/w0"]
visible = false
mesh = ExtResource( 5 )
material = ExtResource( 3 )

[node name="CSGMesh2" type="CSGMesh" parent="Player/PlayerView/StaticDynamicWeapons/StaticWeapons/w0"]
visible = false
mesh = ExtResource( 5 )
material = ExtResource( 9 )

[node name="CSGMesh0" type="CSGMesh" parent="Player/PlayerView/StaticDynamicWeapons/StaticWeapons/w0"]
visible = false
mesh = ExtResource( 5 )
material = ExtResource( 8 )

[node name="Spawn" type="Spatial" parent="."]
transform = Transform( 1.42857, 0, 0, 0, 1, 0, 0, 0, 2.35872, 0, 0, 0 )

[node name="StaticBody" type="StaticBody" parent="Spawn"]
physics_material_override = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="Spawn/StaticBody"]
transform = Transform( 11.2, 0, 0, 0, 0.1, 0, 0, 0, 9.2, 0, 0, 0 )
shape = SubResource( 4 )

[node name="CSGBox" type="CSGBox" parent="Spawn/StaticBody/CollisionShape"]
material = SubResource( 5 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.46725, 6.91516, -18.8866 )
visible = false
omni_range = 32.0

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 21, 0 )
light_energy = 0.52
